Improved styling of tables to ensure all fields are readable

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -142,3 +142,6 @@ body {
     white-space: nowrap;
     width: 1%;
 }
+.min-width-column {
+    min-width: 150px;
+}
